# Xil

./: .clang-format  .git-blame-ignore-revs  LICENSE  README.md  check.py  cppitertools.nix  default.nix  flake.nix  meson.build  meson.options  package.nix  shell.nix
src/: attriter.cpp  attriter.hpp  build.cpp  build.hpp  flake.cpp  flake.hpp  logging.cpp  logging.hpp  main.cpp  nixcompat.h.in  settings.hpp.in  xil.cpp  xil.hpp
src/std/: list.hpp  map.hpp  optional.hpp  span.hpp  string.hpp  string_view.hpp  vector.hpp
xillib/: default.nix
xillib/cleanCallPackageWith/: default.nix
xillib/cleanupDrv/: default.nix
xillib/drvListByName/: default.nix
